# vot-worker

./: .gitignore  README.md  changelog.md
.github/workflows/: cloudflare.yml  deploy.yml  webpack.yml
axum/: .dockerignore  .example.env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
axum/src/: main.rs
axum/src/api/: browser.rs  mod.rs
axum/src/data/: config.rs
axum/src/routes/: fallback.rs  health.rs  mod.rs  session.rs  stream_translation.rs  video_subtitles.rs  video_translation.rs
axum/src/utils/: handlers.rs  mod.rs  utils.rs
cloudflare/: CloudflareWorker.js  README.md  changelog.md  wrangler.toml
deno/: README.md  changelog.md  config.js  deno.json  index.js  requests.js  responses.js  validators.js
deno/routes/: health.js  index.js  session.js  streamTranslation.js  videoSubtitles.js  videoTranslation.js
elysia/: .gitignore  .oxlintrc.json  Dockerfile  README.md  bun.lockb  docker-compose.yml  ecosystem.config.cjs  ecosystem.config.json  eslint.config.js  package.json
elysia/src/: config.ts  errors.ts  index.ts  logging.ts  request.ts  setup.ts
elysia/src/controllers/health/: index.ts
elysia/src/controllers/session/: index.ts
elysia/src/controllers/stream-translation/: index.ts
elysia/src/controllers/video-subtitles/: index.ts
elysia/src/controllers/video-translation/: index.ts
elysia/src/models/: proxy.model.ts
elysia/src/types/: global.d.ts  logging.ts  requests.ts
fastly/: README.md  fastly.toml  package-lock.json
fastly/src/: index.js
