[package]
name = "vot-worker"
version = "1.0.16"
edition = "2021"

[dependencies]
axum = { version = "0.8.3" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
lazy_static = "1.5.0"
reqwest = { version = "0.12.15", features = ["json"] }
toml = "0.8.20"
tower-http = { version = "0.6.2", features = ["cors"] }
dotenv = "0.15.0"
